[package]
name = "press_here"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
dyn-clone = "1.0.20"
pastey = "0.2.0"

[features]
default = ["visualizer"]
visualizer = []

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "change_binding"
path = "examples/change_binding.rs"

[[example]]
name = "smoothing"
path = "examples/smoothing.rs"

[[example]]
name = "visualization"
path = "examples/visualization.rs"
