[package]
name = "press_here"
description = "Simple and modular input handling for Bevy"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ad-kr/press_here"
readme = "README.md"
keywords = ["bevy", "input"]
categories = ["game-development"]

[dependencies]
bevy = "0.17.3"
dyn-clone = "1.0.20"
pastey = "0.2.0"

[features]
default = ["visualizer"]
visualizer = []

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "change_binding"
path = "examples/change_binding.rs"

[[example]]
name = "smoothing"
path = "examples/smoothing.rs"

[[example]]
name = "visualization"
path = "examples/visualization.rs"

[[example]]
name = "normalize"
path = "examples/normalize.rs"

[[example]]
name = "all_bindings"
path = "examples/all_bindings.rs"
